--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,7 @@
     "tailwindcss": "^4.1.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "~6.2.6"
   },
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
