--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
+    "react-router": "^7.5.3",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
